displaying weather current

--- a/index.html
+++ b/index.html
@@ -347,8 +347,13 @@
       </p>
       <button id="searchbutton">Search</button>
     </form>
-    <div class="searchResults">
-
+    <div class="searchResults hide">
+      <div id="resultName"></div>
+      <div id="resultDate"></div>
+      <img src="" class="currentIcon"/>
+      <div id="resultTemp"></div>
+      <div id="resultHumidity"></div>
+      <div id="resultWind"></div>
     </div>
   </div>
 </body>
