--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" media="all" href="./styles.css" type="text/css" />
-  <title>Work Day Scheduler</title>
+  <link rel="stylesheet" media="all" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" media="all" href="./styles.css" type="text/css" />
+  <title>Weather-Beaten Wisdom</title>
 </head>
-<header>
+<header class="navbar bg-dark flex-md-nowrap shadow">
   <h1> Weather Dashboard </h1>
 </header>
 
 <body>
-  <cdiv class="past-search column-1">
-    <h2>Past Searches</h2>
+  <div class="container-test">
+  <div class="past-search col-3">
+    <div class="heading">
+      <h2>Past Searches</h2>
+    </div>
     <ul id="pastSearches">
-      <span id="past">
-      
-      </span>
+      <ul id="past">
+
+      </ul>
       <p>
     </ul>
   </div>
-  <div class = "column-2">
-    <h2>Search for a City:</h2>
+  <div class="col-9">
+    <div class="searchtitle"><h3>Search for a City:</h3></div>
     <form id="form">
       <p>
         <label for="searchCity">City:</label>
@@ -348,13 +352,46 @@
       <button id="searchbutton">Search</button>
     </form>
     <div class="searchResults hide">
-      <div id="resultName"></div>
-      <div id="resultDate"></div>
-      <img src="" class="currentIcon"/>
-      <div id="resultTemp"></div>
-      <div id="resultHumidity"></div>
-      <div id="resultWind"></div>
+      <div>
+        <h3 id="resultName"></h3>
+      </div>
+      <div class="forecast">
+        <div id="resultDate"></div>
+        <img src="" class="currentIcon" SameSite="None"/>
+        <div id="resultTemp"></div>
+        <div id="resultHumidity"></div>
+        <div id="resultWind"></div>
+      </div>
+      <div class="forecast">
+        <div id="resultDate"></div>
+        <img src="" class="currentIcon" />
+        <div id="resultTemp"></div>
+        <div id="resultHumidity"></div>
+        <div id="resultWind"></div>
+      </div>
+      <div class="forecast">
+        <div id="resultDate"></div>
+        <img src="" class="currentIcon" />
+        <div id="resultTemp"></div>
+        <div id="resultHumidity"></div>
+        <div id="resultWind"></div>
+      </div>
+      <div class="forecast">
+        <div id="resultDate"></div>
+        <img src="" class="currentIcon" />
+        <div id="resultTemp"></div>
+        <div id="resultHumidity"></div>
+        <div id="resultWind"></div>
+      </div>
+      <div class="forecast">
+        <div id="resultDate"></div>
+        <img src="" class="currentIcon" />
+        <div id="resultTemp"></div>
+        <div id="resultHumidity"></div>
+        <div id="resultWind"></div>
+      </div>
     </div>
+  </div>
   </div>
 </body>
 
@@ -362,3 +399,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
   crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+  integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/dayjs"></script>
+<script src="https://unpkg.com/dayjs-plugin-utc"></script>
