debugging local storage and search retrieval

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="heading">
       <h2>Past Searches</h2>
     </div>
+    <button class="clearButton">Clear History</button>
     <ul id="pastSearches">
       <ul id="past">
 
