--- a/index.html
+++ b/index.html
@@ -357,37 +357,44 @@
         <div>
           <h3 id="resultName"></h3>
         </div>
-        <div class="forecast">
-          <div id="resultDate"></div>
+        <div class="currentcast">
+          <div id="currentDate">Current Weather</div>
           <img src="" class="currentIcon" SameSite="None" />
+          <div id="currentTemp"></div>
+          <div id="currentHumidity"></div>
+          <div id="currentWind"></div>
+        </div>
+        <div class="forecast">
+          <div id="resultDate"></div>
+          <img src="" class="resultIcon" SameSite="None" />
           <div id="resultTemp"></div>
           <div id="resultHumidity"></div>
           <div id="resultWind"></div>
         </div>
         <div class="forecast">
           <div id="resultDate"></div>
-          <img src="" class="currentIcon" />
+          <img src="" class="resultIcon" SameSite="None"/>
           <div id="resultTemp"></div>
           <div id="resultHumidity"></div>
           <div id="resultWind"></div>
         </div>
         <div class="forecast">
           <div id="resultDate"></div>
-          <img src="" class="currentIcon" />
+          <img src="" class="resultIcon" SameSite="None"/>
           <div id="resultTemp"></div>
           <div id="resultHumidity"></div>
           <div id="resultWind"></div>
         </div>
         <div class="forecast">
           <div id="resultDate"></div>
-          <img src="" class="currentIcon" />
+          <img src="" class="resultIcon" SameSite="None"/>
           <div id="resultTemp"></div>
           <div id="resultHumidity"></div>
           <div id="resultWind"></div>
         </div>
         <div class="forecast">
           <div id="resultDate"></div>
-          <img src="" class="currentIcon" />
+          <img src="" class="resultIcon" SameSite="None"/>
           <div id="resultTemp"></div>
           <div id="resultHumidity"></div>
           <div id="resultWind"></div>
