updating CSS/HTML to add in forcast label and adjust spacing

--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
           <div id="currentTemp"></div>
           <div id="currentHumidity"></div>
           <div id="currentWind"></div>
+          <div id="forecastLabel">5-Day Forecast</div>
         </div>
         <div class="forecast">
           <div id="resultDate"></div>
